[package]
name = "cobol-railroad-diagram"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
railroad = "0.1.1"
lalrpop-util = {version = "0.19.7", features = ["lexer"]}
json = "0.12.4"

[build-dependencies]
lalrpop = "0.19.7"
